fix resposive in tomate story, home

--- a/src/app/components/pages/home/categories/categories.component.html
+++ b/src/app/components/pages/home/categories/categories.component.html
@@ -2,7 +2,7 @@
 
 <!-- <app-background></app-background> -->
 
-<div class="row g-0 justify-content-between" style="margin: 0 20px;">
+<div class="cards justify-content-between" style="margin: 0 20px;">
   <!-- // Category Card for Learning Corner -->
   <div class="col-auto"> <app-category-card [bgColor]="'#FF006E'" [bgIcon]="'images/learningCorenetCategory.png'"
       [mainIcon]="'images/mainlearningCorenetCategory.png'" [title]="'Learning\nCorner'"
