--- a/src/app/components/pages/home/hero-section/hero-section.component.html
+++ b/src/app/components/pages/home/hero-section/hero-section.component.html
@@ -31,9 +31,9 @@
 
 <!-- <div class="paper-plane"><img src="images/paperPlane.png" alt=""></div> -->
 
-<div class="lets-play"><img src="images/letsPlay.png" alt="lets-play"></div>
+<div class="lets-play"><img class="img-fluid" src="images/letsPlay.png" alt="lets-play"></div>
 
-<div class="collection ">
+<div class="collection">
     <div class="collection-item enjoy" style="  transform: rotate(20deg); background-color: rgba(255, 0, 110, 1);">
         Enjoy
     </div>
