--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -27,7 +27,7 @@
     </div>
     <br>
     <br>
-    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+    <div class="component-animation footer" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
         <app-home-footer></app-home-footer>
     </div>
 </div>
