--- a/src/app/components/pages/home/categories/categories.component.css
+++ b/src/app/components/pages/home/categories/categories.component.css
@@ -1,6 +1,6 @@
 .categories-title{
     font-family: "Baloo 2", sans-serif;
-    font-size: 4rem;
+    font-size: clamp(2rem, 5vw, 4rem);
     font-weight: 700;
     color: #000;
     margin-top: 40px;
@@ -8,4 +8,12 @@
     text-align: center;
 }body{
     overflow: hidden;
+}
+
+.cards {
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* توزيع الأعمدة تلقائيًا */
+    gap: 1rem; /* مسافة بين العناصر */
+    padding: 1rem; /* حواف داخلية */
 }
