--- a/src/app/components/pages/home/hero-section/hero-section.component.css
+++ b/src/app/components/pages/home/hero-section/hero-section.component.css
@@ -117,22 +117,28 @@ body {
     animation: fadeInFromTop 1s ease-out 1.2s both;
 }
 
+.lets-play{
+     position: absolute;
+    top: 9%;
+    left: 33%;
+    width: 20%;
+    /* height: 20%; */
+    /* border: red 1px solid; */
+}
 .lets-play img {
     animation: spin 10s linear infinite;
-    position: absolute;
-    top: 66vh;
-    left: 30vw;
+    object-fit: cover;
 }
 .collection {
     position: absolute;
-    top: 66vh;
-    left: 50vw;
+    top: 10%;
+    left: 50%;
 
 }
 
 .collection-item {
     color: white;
-    font-size: 20px;
+    font-size: clamp(0.5rem, 1.5vw, 1.2rem);
     font-family: "Architects Daughter", cursive;
     padding: 10px 32px;
     border-radius: 222px;
@@ -225,4 +231,37 @@ body {
     100% {
         transform: translate(20px, 20px) rotate(-20deg);
     }
+}
+
+
+
+/* resposive */
+
+/* mobile */
+@media (max-width: 480px) {
+    .collection{
+        top: 6%;
+        left: 46%;
+    }
+    .collection-item{
+    padding: 7px 16px;
+
+    }
+}
+
+/* tablet */
+@media (min-width: 481px) and (max-width: 968px) {
+    .collection{
+        top: 6%;
+        left: 46%;
+    }
+    .collection-item{
+    padding: 7px 16px;
+
+    }
+}
+
+/* laptob */
+@media (min-width: 769px) {
+
 }
