--- a/src/app/components/pages/home/home-footer/home-footer.component.html
+++ b/src/app/components/pages/home/home-footer/home-footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer-home row">
+<div class="footer-home">
     <div class="logo-section col-auto d-flex flex-column align-items-center">
         <a class="logo" href="#top" title="Go to main page up">
             <img src="images/logo-patarif.png" alt="logo">
