--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -7,6 +7,7 @@ body{
     backdrop-filter: blur(50px);
 }
 
+
 .circle {
     width: 250px;
     height: 250px;
@@ -54,4 +55,9 @@ body{
 .component-animation[data-aos="fade-up"].aos-animate {
     opacity: 1;
     transform: translateY(0);
+}
+.footer{
+    background-color: #6486FF;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
 }
