--- a/src/app/components/pages/home/introduction/introduction.component.css
+++ b/src/app/components/pages/home/introduction/introduction.component.css
@@ -17,5 +17,5 @@ body{
 .intro-text-1 {
     width: 44%;
     font-family: "Architects Daughter", cursive;
-    font-size: 22px;
+    font-size: clamp(0.5rem, 1.5vw, 1.3rem);
 }
