--- a/src/app/components/pages/learning/stories/carotte-story/carotte-story.component.css
+++ b/src/app/components/pages/learning/stories/carotte-story/carotte-story.component.css
@@ -57,19 +57,26 @@ body {
 .description {
     color: var(--mainFontColor);
     font-family: var(--comic);
-    font-size: clamp(1.1rem, 2.5vw, 1.5rem);
+    font-size: clamp(0.8rem, 1.5vw, 1.5rem);
     font-weight: 700;
+    animation: popup 0.6s ease-out forwards;
+    animation-delay: 0.4s;
+    opacity: 0;
 }
 
 .firstDesc {
     font-size: clamp(1.1rem, 2.5vw, 2rem);
     font-weight: bold;
     font-family: var(--mainFont);
+    animation: popup 0.6s ease-out forwards;
+    animation-delay: 0.6s;
+    opacity: 0;
+
 }
 
 .title {
     color: var(--carotteColor);
-    font-size: clamp(2rem, 8vw, 6rem);
+    font-size: clamp(2rem, 6vw, 6rem);
     font-family: var(--mainFont);
     font-weight: bold;
     text-shadow:
@@ -81,15 +88,38 @@ body {
         0px 4px 0 #fff,
         -4px 0px 0 #fff,
         4px 0px 0 #fff;
+
+
+    animation: popup 0.6s ease-out forwards;
 }
 
+@keyframes popup {
+    0% {
+        opacity: 0;
+        transform: scale(0.5) translateY(20px);
+    }
+
+    60% {
+        opacity: 1;
+        transform: scale(1.1) translateY(-5px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+    }
+}
+
+
 .cover-title .btn {
+    visibility: hi;
     width: 120px;
     height: 42px;
     background-color: #81BEAE;
     color: white;
     border: none;
-    animation: discover 1s infinite alternate;
+    opacity: 0;
+    animation: popupBtn 0.6s ease-out 1s forwards, discover 1s infinite alternate;
     font-family: var(--mainFont);
     border-radius: 10px;
     box-shadow: 0 8px 32px 0 rgba(129, 190, 174, 0.6), 0 4px 12px 0 rgba(0, 0, 0, 0.18);
@@ -102,8 +132,25 @@ body {
         outline 0.35s cubic-bezier(0.23, 1, 0.32, 1),
         outline-offset 0.35s cubic-bezier(0.23, 1, 0.32, 1),
         transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
+
 }
 
+@keyframes popupBtn {
+    0% {
+        opacity: 0;
+        transform: scale(0.5) translateY(20px);
+    }
+
+    60% {
+        opacity: 1;
+        transform: scale(1.1) translateY(-5px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+    }
+}
 
 @keyframes discover {
     from {
@@ -129,35 +176,9 @@ body {
     border: 2.5px solid white;
     outline: 3px solid var(--carotteColor);
     outline-offset: 4px;
-    animation: discoverHover 1s infinite alternate;
+    /* animation: discoverHover 1s infinite alternate; */
     scale: 1.06;
 }
-
-@keyframes discoverHover {
-    from {
-        /* scale: 1.0; */
-        background-color: #81BEAE;
-        border: 2.5px solid #ffffff00;
-        outline: 3px solid #48c4a300;
-        outline-offset: 0px;
-    }
-
-    to {
-        /* scale: 1.06; */
-        background-color: var(--carotteColor);
-        border: 2.5px solid #fff;
-        outline: 3px solid var(--carotteColor);
-        outline-offset: 4px;
-
-    }
-}
-
-/* .content{
-    overflow: scroll;
-    scroll-snap-type: y mandatory;
-    width: 100%;
-    height: 100vh;
-} */
 
 .cloud1 {
     position: absolute;
@@ -197,18 +218,16 @@ body {
 }
 
 @keyframes appearSection {
-  from {
-    opacity: 0;
-    transform: translate3d(0, -200px, 0) scale(0.5);
-  }
+    from {
+        opacity: 0;
+        transform: translate3d(0, -200px, 0) scale(0.5);
+    }
 
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0) scale(1);
-  }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0) scale(1);
+    }
 }
-
-
 
 .section2 {
     display: flex;
@@ -770,7 +789,7 @@ body {
 }
 
 
-/* reposive */
+/* resposive */
 
 /* mobile */
 @media (max-width: 480px) {
