--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -1,16 +1,17 @@
 <!-- login.component.html -->
-<div class="container d-flex justify-content-center align-items-center min-vh-100 m-auto">
+ <!-- <img class="logo" src="images/logo-patarif.png" alt="logo" width="30"> -->
+<div class="container">
   <div class="gradient-border-wrapper">
   <div class="row shadow-lg  overflow-hidden">
 
     <!-- Left side -->
-    <div class="col-md-6 d-flex flex-column justify-content-center align-items-center text-white">
+    <div class="col-md-5 d-flex flex-column justify-content-center align-items-center text-white">
       <img src="images/login-img.png" alt="Login illustration" class="login-img img-fluid"  />
       <p class="text-img ">Log in to Batarev world and enjoy with us!</p>
     </div>
 
     <!-- Right side (form) -->
-    <div class="col-md-6 p-5 mt-5">
+    <div class="col-md-7 p-5 mt-5">
       <h2 class="account-header mb-4 fw-bold text-center">Login</h2>
       <form>
         <div class="mb-4">
