--- a/src/app/components/account/signup/signup.component.css
+++ b/src/app/components/account/signup/signup.component.css
@@ -1,12 +1,45 @@
+body{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 
+}
 .container{
-  margin: auto;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  /* width: 70%; */
+}
+
+.logo{
+  position: relative;
+  transform: translateX( -50%);
+  left: 50%;
+  margin-bottom: 2%;
 }
 .gradient-border-wrapper {
-  padding: 4px; /* سمك البوردر */
+  padding: 6px; /* سمك البوردر */
   border-radius: 48px;
-  background: linear-gradient(135deg,#FFEE52, #FF006E,#FB5664, #6486FF, #9B57FA,#FFEE52, #FF006E,#FB5664,#6486FF, #9B57FA);
+  background: linear-gradient(135deg, 
+    #FFEE52, #FF006E, #FB5664, #6486FF, #9B57FA,
+    #FFEE52, #FF006E, #FB5664, #6486FF, #9B57FA);
+  background-size: 400% 400%;  /* ✅ مهم لتحريك الخلفية */
+  animation: moveGradient 10s linear infinite;
   width: 1208px;
+}
+
+/* الحركة */
+@keyframes moveGradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .register-card {
