--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -1,16 +1,17 @@
 <!-- register.component.html -->
-<div class="container d-flex justify-content-center align-items-center min-vh-100 m-auto">
+<div class="container">
+  <img class="logo" src="images/logo-patarif.png" alt="logo" width="100">
   <div class="gradient-border-wrapper">
   <div class="row shadow-lg  overflow-hidden">
 
     <!-- Left side -->
-    <div class="col-md-6 d-flex flex-column justify-content-center align-items-center text-white">
+    <div class="col-md-5 d-flex flex-column justify-content-center align-items-center text-white">
       <img src="images/signup-img.png" alt="Batarev art" class="signup-img img-fluid"  />
       <p class="text-img fw-bold">Create an account and join <br> the wonderful  world of <br> Batarev and have fun with us!</p>
     </div>
 
     <!-- Right side (form) -->
-    <div class="col-md-6 p-5">
+    <div class="col-md-7 p-5">
       <h2 class="account-header mb-4 fw-bold text-center">Create Account</h2>
       <form>
         <div class="mb-4 d-flex gap-3">
