--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -13,14 +13,17 @@
     <!-- Right side (form) -->
     <div class="col-md-7 p-5 mt-5">
       <h2 class="account-header mb-4 fw-bold text-center">Login</h2>
-      <form>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="mb-4">
-          <input type="email" class="form-control" id="loginEmail" placeholder="Email" required>
+          <input type="email" class="form-control" id="loginEmail" placeholder="Email" formControlName="email">
         </div>
-        <div class="mb-3">
-          <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
+          <div class="mb-3 w-100 password-wrapper">
+          <input type="password" [type]="showPassword ? 'text' : 'password'" class="form-control" id="loginPassword" placeholder="Password" formControlName="password">
+          <span class="toggle-icon" (click)="togglePassword()">
+              <i class="fa-solid" [ngClass]="showPassword ? 'fa-eye-slash' : 'fa-eye'"></i>
+            </span>
         </div>
-        <button type="button" class="btn-create btn btn-primary w-100" [routerLink]="['/home']">Login</button>
+<button type="submit" class="btn-create btn btn-primary w-100" >Login</button>
         <div class="mt-3 text-center">
           Don't have an account? <a class="text-primary" href="/signup">Sign up</a>
         </div>
@@ -44,4 +47,13 @@
       </div>
     </div>
 
+</div>
+
+
+
+<div class="toast-container">
+  <div class="toast" *ngFor="let t of toasts" [attr.data-id]="t.id">
+    <span class="emoji">🧸</span>
+    {{ t.text }}
+  </div>
 </div>
