--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -2,51 +2,77 @@
 <div class="container">
   <img class="logo" src="images/logo-patarif.png" alt="logo" width="100">
   <div class="gradient-border-wrapper">
-  <div class="row shadow-lg  overflow-hidden">
+    <div class="row shadow-lg  overflow-hidden">
 
-    <!-- Left side -->
-    <div class="col-md-5 d-flex flex-column justify-content-center align-items-center text-white">
-      <img src="images/signup-img.png" alt="Batarev art" class="signup-img img-fluid"  />
-      <p class="text-img fw-bold">Create an account and join <br> the wonderful  world of <br> Batarev and have fun with us!</p>
+      <!-- Left side -->
+      <div class="col-md-5 d-flex flex-column justify-content-center align-items-center text-white">
+        <img src="images/signup-img.png" alt="Batarev art" class="signup-img img-fluid" />
+        <p class="text-img fw-bold">Create an account and join <br> the wonderful world of <br> Batarev and have fun
+          with us!</p>
+      </div>
+
+      <!-- Right side (form) -->
+      <div class="col-md-7 p-5">
+        <h2 class="account-header mb-4 fw-bold text-center">Create Account</h2>
+        <form [formGroup]="regirster" (ngSubmit)="onSubmit()">
+          <div class="mb-4 d-flex gap-3">
+            <input type="text" class="form-control" id="firstName" placeholder="first name" name="firstName"
+              formControlName="firstName">
+            <input type="text" class="form-control" id="lastName" placeholder="last name" name="lastName"
+              formControlName="lastName">
+          </div>
+          <div class="mb-4">
+            <input type="email" class="form-control" id="signupEmail" placeholder="Enter your email" name="email"
+              formControlName="email">
+          </div>
+          <div class="mb-3 w-100 password-wrapper">
+            <input [type]="showPassword ? 'text' : 'password'" class="form-control" id="signupPassword"
+              placeholder="Enter your password" name="password" formControlName="password" />
+            <span class="toggle-icon" (click)="togglePassword()">
+              <i class="fa-solid" [ngClass]="showPassword ? 'fa-eye-slash' : 'fa-eye'"></i>
+            </span>
+          </div>
+
+
+          <button type="submit" class="btn-create btn btn-primary w-100">Create Account</button>
+        </form>
+        <div class="mt-3 text-center">
+          have an account? <a class="text-primary" href="/login">login</a>
+        </div>
+        <div class="d-flex align-items-center my-3">
+          <hr class="flex-grow-1 line">
+          <span class="mx-3 fw-bold" style="font-size: 20px;">or</span>
+          <hr class="flex-grow-1 line">
+        </div>
+        <div class="another-account mt-3 text-center">
+          <div class="defualt-account d-flex justify-content-center gap-3">
+            <button type="button" class="btn btn-outline-dark d-flex align-items-center gap-2">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google"
+                style="width: 24px; height: 24px;">
+              sign up with Google
+            </button>
+            <button type="button" class="btn btn-outline-dark d-flex align-items-center gap-2">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple"
+                style="width: 24px; height: 24px;">
+              sign up with Apple ID
+            </button>
+          </div>
+        </div>
+      </div>
+
     </div>
 
-    <!-- Right side (form) -->
-    <div class="col-md-7 p-5">
-      <h2 class="account-header mb-4 fw-bold text-center">Create Account</h2>
-      <form>
-        <div class="mb-4 d-flex gap-3">
-          <input type="text" class="form-control" id="firstName" placeholder="first name" required>
-          <input type="text" class="form-control" id="lastName" placeholder="last name" required>
-        </div>
-        <div class="mb-4">
-          <input type="email" class="form-control" id="signupEmail" placeholder="Enter your email" required>
-        </div>
-        <div class="mb-3">
-          <input type="password" class="form-control" id="signupPassword" placeholder="Enter your password" required>
-        </div>
-        <!-- <div class="mb-3">
-          <input type="password" class="form-control" id="signupConfirmPassword" placeholder="Confirm your password" required>
-        </div> -->
-        <button type="submit" class="btn-create btn btn-primary w-100">Create Account</button>
-        Already have an account? <a class="text-primary" routerLink="/login" href="login" routerLinkActive="active" style="cursor:pointer;">Login</a>
-      </form>
-      <div class="d-flex align-items-center my-3">
-        <hr class="flex-grow-1 line" >
-        <span class="mx-3 fw-bold" style="font-size: 20px;">or</span>
-        <hr class="flex-grow-1 line" >
-      </div>
-      <div class="another-account mt-3 text-center">
-        <div class="defualt-account d-flex justify-content-center gap-3">
-          <button type="button" class="btn btn-outline-dark d-flex align-items-center gap-2">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/google/google-original.svg" alt="Google" style="width: 24px; height: 24px;">
-            sign up with Google
-          </button>
-          <button type="button" class="btn btn-outline-dark d-flex align-items-center gap-2">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple" style="width: 24px; height: 24px;">
-            sign up with Apple ID
-          </button>
-        </div>
-      </div>
-    </div>
 
+<div class="toast-container" *ngIf="submitted && regirster.invalid">
+  <div class="toast" *ngIf="regirster.controls['firstName'].invalid" [attr.data-key]="'firstName-' + submitted">
+    <span class="emoji">🧸</span> Please write your first name (2–20 characters)
+  </div>
+
+  <div class="toast" *ngIf="regirster.controls['email'].invalid" [attr.data-key]="'email-' + submitted">
+    <span class="emoji">📧</span> Email is required and must be valid
+  </div>
+
+  <div class="toast" *ngIf="regirster.controls['password'].invalid" [attr.data-key]="'password-' + submitted">
+    <span class="emoji">🔒</span> Password must be at least 10 characters
+  </div>
 </div>
