--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Right Side (Search + Avatar) -->
-    <div class="d-flex align-items-center gap-3">
+    <!-- <div class="d-flex align-items-center gap-3">
       <i class="bi bi-search fs-5"></i>
       <div class="dropdown">
         <img src="images/user-img.png"
@@ -66,6 +66,38 @@
           <li><a class="dropdown-item" href="signup">Logout</a></li>
         </ul>
       </div>
-    </div>
+    </div> -->
+
+    <div class="d-flex align-items-center gap-3 user-menu">
+  <i class="bi bi-search fs-5 search-icon"></i>
+  <div class="dropdown">
+    <img src="images/user-img.png"
+         class="dropdown-toggle rounded-circle user-avatar"
+         style="width:50px; height:50px; cursor:pointer;"
+         data-bs-toggle="dropdown"
+         aria-expanded="false"
+         alt="User" />
+    <ul class="dropdown-menu dropdown-menu-end shadow-sm">
+      <!-- <li><h6 class="dropdown-header">Account</h6></li> -->
+      <li>
+        <a class="dropdown-item d-flex align-items-center gap-2" href="#">
+          <i class="bi bi-person-circle fs-5"></i> Profile
+        </a>
+      </li>
+      <li>
+        <a class="dropdown-item d-flex align-items-center gap-2" href="#">
+          <i class="bi bi-gear fs-5"></i> Settings
+        </a>
+      </li>
+      <!-- <li><hr class="dropdown-divider"></li> -->
+      <li>
+        <a class="dropdown-item logout d-flex align-items-center gap-2 text-danger" href="signup">
+          <i class="bi bi-box-arrow-right fs-5"></i> Logout
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
   </div>
 </nav>
